fix too small item font-size

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -4,11 +4,22 @@
   justify-content: space-between;
   column-gap: 2rem;
   padding: 1.5rem;
-  font-size: 0.8rem;
   background-color: var(--main-background-color);
   border: 1px solid var(--first-color);
   border-radius: var(--main-border-radius);
   box-shadow: var(--main-box-shadow);
+}
+
+.name-text,
+.number-text {
+  font-size: 0.8rem;
+}
+
+@media screen and (min-width: 700px) {
+  .name-text,
+  .number-text {
+    font-size: 1rem;
+  }
 }
 
 .delete-button {
@@ -28,6 +39,7 @@
 
 .item-icon-box {
   display: flex;
+  align-items: center;
   gap: 0.5rem;
 }
 
